; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_asic3.c_asic3_read_register.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_asic3.c_asic3_read_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asic3 = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @asic3_read_register(%struct.asic3* %0, i32 %1) #0 {
  %3 = alloca %struct.asic3*, align 8
  %4 = alloca i32, align 4
  store %struct.asic3* %0, %struct.asic3** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.asic3*, %struct.asic3** %3, align 8
  %6 = getelementptr inbounds %struct.asic3, %struct.asic3* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.asic3*, %struct.asic3** %3, align 8
  %10 = getelementptr inbounds %struct.asic3, %struct.asic3* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = lshr i32 %8, %11
  %13 = zext i32 %12 to i64
  %14 = add nsw i64 %7, %13
  %15 = call i32 @ioread16(i64 %14)
  ret i32 %15
}

declare dso_local i32 @ioread16(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
